tweet individual legislators. Remove async validation

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -9,6 +9,8 @@
 // Custom Colors
 $cyan: #33e0ff;
 $humility: #777;
+$repRed: #E91D0E;
+$demBlue: #232066;
 
 // Bootstrap Variables
 $brand-primary: darken(#428bca, 6.5%);
